[gd_scene load_steps=8 format=2]

[ext_resource path="res://rooms/WorldTiles.tscn" type="PackedScene" id=1]
[ext_resource path="res://menus/CreditsMenu.gd" type="Script" id=2]
[ext_resource path="res://menus/MenuButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/title-font.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/BitingMyNails.otf" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/text-font.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 4
font_data = ExtResource( 5 )

[node name="CreditsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 917504, 0, 3, 917505, 0, 3, 917506, 0, 3, 917507, 0, 3, 917508, 0, 3, 917509, 0, 3, 917510, 0, 3, 917511, 0, 3, 917512, 0, 3, 917513, 0, 3, 917514, 0, 3, 917515, 0, 3, 917516, 0, 3, 917517, 0, 3, 917518, 0, 3, 917519, 0, 3, 917520, 0, 3, 917521, 0, 3, 917522, 0, 3, 917523, 0, 3, 917524, 0, 3, 917525, 0, 3, 917526, 0, 3, 917527, 0, 3, 917528, 0, 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 21
custom_constants/margin_top = 21
custom_constants/margin_left = 21
custom_constants/margin_bottom = 42
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_left = 21.0
margin_top = 21.0
margin_right = 504.0
margin_bottom = 274.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 15.0
margin_right = 467.0
margin_bottom = 253.0
custom_constants/separation = 11

[node name="Title" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 452.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.337255, 0.580392, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Credits"
align = 1

[node name="CreditsContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 452.0
margin_bottom = 215.0
custom_constants/separation = 42

[node name="ArtContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer"]
margin_right = 130.0
margin_bottom = 161.0
custom_constants/separation = 11

[node name="ArtTitle" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/ArtContainer"]
margin_right = 130.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "Art"
align = 1

[node name="ArtNameContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/ArtContainer"]
margin_top = 32.0
margin_right = 130.0
margin_bottom = 70.0

[node name="ArtNameLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/ArtContainer/ArtNameContainer"]
margin_right = 130.0
margin_bottom = 17.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.945098, 0.85098, 0.466667, 1 )
custom_colors/font_color_hover = Color( 0.94902, 0.760784, 0, 1 )
text = "Platformer Art:"
underline = 2

[node name="ArtNameLink2" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/ArtContainer/ArtNameContainer"]
margin_left = 22.0
margin_top = 21.0
margin_right = 107.0
margin_bottom = 38.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.945098, 0.85098, 0.466667, 1 )
custom_colors/font_color_hover = Color( 0.94902, 0.760784, 0, 1 )
text = "Pixel Redux"
underline = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/ArtContainer"]
margin_top = 81.0
margin_right = 130.0
margin_bottom = 98.0
alignment = 1

[node name="ByLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/ArtContainer/HBoxContainer"]
margin_left = 6.0
margin_right = 31.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 6 )
text = "by: "

[node name="ArtistLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/ArtContainer/HBoxContainer"]
margin_left = 35.0
margin_right = 123.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.945098, 0.85098, 0.466667, 1 )
custom_colors/font_color_hover = Color( 0.94902, 0.760784, 0, 1 )
text = "Kenney Art"
underline = 2

[node name="LicenseLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/ArtContainer"]
margin_top = 109.0
margin_right = 130.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 6 )
text = "Licensed under"
align = 1

[node name="LicenseLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/ArtContainer"]
margin_left = 43.0
margin_top = 137.0
margin_right = 87.0
margin_bottom = 154.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.945098, 0.85098, 0.466667, 1 )
custom_colors/font_color_hover = Color( 0.94902, 0.760784, 0, 1 )
text = "CC0 1.0"
underline = 2

[node name="MusicContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer"]
margin_left = 172.0
margin_right = 290.0
margin_bottom = 161.0
custom_constants/separation = 11

[node name="MusicTitle" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/MusicContainer"]
margin_right = 118.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "Music"
align = 1

[node name="SongNameLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/MusicContainer"]
margin_left = 11.0
margin_top = 32.0
margin_right = 107.0
margin_bottom = 49.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.945098, 0.85098, 0.466667, 1 )
custom_colors/font_color_hover = Color( 0.94902, 0.760784, 0, 1 )
text = "Wanderlust"
underline = 2

[node name="SongNameLink2" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/MusicContainer"]
margin_left = 59.0
margin_top = 60.0
margin_right = 59.0
margin_bottom = 77.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
disabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/MusicContainer"]
margin_top = 88.0
margin_right = 118.0
margin_bottom = 105.0
alignment = 1

[node name="ByLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/MusicContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 37.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 6 )
text = "by: "

[node name="ArtistLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/MusicContainer/HBoxContainer"]
margin_left = 41.0
margin_right = 106.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.945098, 0.85098, 0.466667, 1 )
custom_colors/font_color_hover = Color( 0.94902, 0.760784, 0, 1 )
text = "Jim Hall"
underline = 2

[node name="LicenseLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/MusicContainer"]
margin_top = 116.0
margin_right = 118.0
margin_bottom = 133.0
custom_fonts/font = ExtResource( 6 )
text = "Licensed under"
align = 1

[node name="LicenseLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/MusicContainer"]
margin_left = 27.0
margin_top = 144.0
margin_right = 90.0
margin_bottom = 161.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.945098, 0.85098, 0.466667, 1 )
custom_colors/font_color_hover = Color( 0.94902, 0.760784, 0, 1 )
text = "CC BY 4.0"
underline = 2

[node name="FontContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer"]
margin_left = 332.0
margin_right = 452.0
margin_bottom = 161.0
custom_constants/separation = 11

[node name="FontTitle" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/FontContainer"]
margin_right = 120.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "Font"
align = 1

[node name="FontNameLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/FontContainer"]
margin_left = 3.0
margin_top = 32.0
margin_right = 116.0
margin_bottom = 49.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.945098, 0.85098, 0.466667, 1 )
custom_colors/font_color_hover = Color( 0.94902, 0.760784, 0, 1 )
text = "Biting my nails"
underline = 2

[node name="FontNameLink2" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/FontContainer"]
margin_left = 60.0
margin_top = 60.0
margin_right = 60.0
margin_bottom = 77.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
disabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/FontContainer"]
margin_top = 88.0
margin_right = 120.0
margin_bottom = 105.0
alignment = 1

[node name="ByLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/FontContainer/HBoxContainer"]
margin_right = 25.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 6 )
text = "by: "

[node name="ArtistLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/FontContainer/HBoxContainer"]
margin_left = 29.0
margin_right = 120.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.945098, 0.85098, 0.466667, 1 )
custom_colors/font_color_hover = Color( 0.94902, 0.760784, 0, 1 )
text = "Ray Larabie"
underline = 2

[node name="LicenseLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/FontContainer"]
margin_top = 116.0
margin_right = 120.0
margin_bottom = 133.0
custom_fonts/font = ExtResource( 6 )
text = "Licensed under"
align = 1

[node name="LicenseLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/FontContainer"]
margin_left = 38.0
margin_top = 144.0
margin_right = 82.0
margin_bottom = 161.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.945098, 0.85098, 0.466667, 1 )
custom_colors/font_color_hover = Color( 0.94902, 0.760784, 0, 1 )
text = "CC0 1.0"
underline = 2

[node name="MenuButton" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 162.0
margin_top = 226.0
margin_right = 290.0
margin_bottom = 253.0
text = "Menu"
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/ArtContainer/ArtNameContainer/ArtNameLink" to="." method="_on_ArtNameLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/ArtContainer/ArtNameContainer/ArtNameLink2" to="." method="_on_ArtNameLink2_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/ArtContainer/HBoxContainer/ArtistLink" to="." method="_on_ArtistLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/ArtContainer/LicenseLink" to="." method="_on_LicenseLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/MusicContainer/SongNameLink" to="." method="_on_SongNameLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/MusicContainer/HBoxContainer/ArtistLink" to="." method="_on_MusicArtistLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/MusicContainer/LicenseLink" to="." method="_on_MusicLicenseLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/FontContainer/FontNameLink" to="." method="_on_FontNameLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/FontContainer/HBoxContainer/ArtistLink" to="." method="_on_FontArtistLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsContainer/FontContainer/LicenseLink" to="." method="_on_FontLicenseLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
